<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/con_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StartFragment">


    <ImageView
        android:id="@+id/imv1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/fourrelay_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/scr_lay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv1"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/but2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/ic_no_background"
                        android:scaleType="center"
                        android:src="@mipmap/ic_app_icon_foreground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_head"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="24dp"
                        android:background="@drawable/rounded"
                        android:backgroundTint="#BAB2B2"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:padding="4dp"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:text="SMART HOUSE"
                        android:textAlignment="center"
                        android:textColor="#070707"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_head2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded"
                        android:backgroundTint="#BAB2B2"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:paddingStart="6dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="4dp"
                        android:text="The mobile remote center"
                        android:textColor="#040303"
                        android:textColorHint="#090909"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/tv_head"
                        app:layout_constraintStart_toStartOf="@+id/tv_head"
                        app:layout_constraintTop_toBottomOf="@+id/tv_head" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv2"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/background_color_transparent"
                android:clickable="true"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toStartOf="@+id/cv3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_rel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/background_color"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="3dp"
                        android:text="@string/relay1"
                        android:textAlignment="center"
                        android:textColor="#050505"
                        app:layout_constraintEnd_toStartOf="@+id/tv_rel3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv2" />

                    <TextView
                        android:id="@+id/tv_rel3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/background_color"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="3dp"
                        android:text="@string/relay2"
                        android:textAlignment="center"
                        android:textColor="#050505"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_rel"
                        app:layout_constraintTop_toBottomOf="@+id/tv2" />

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded"
                        android:backgroundTint="#BAB2B2"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:text="201 4Relays"
                        android:textColor="#070707"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_rel4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/background_color"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="3dp"
                        android:text="@string/relay3"
                        android:textAlignment="center"
                        android:textColor="#050505"
                        app:layout_constraintEnd_toStartOf="@+id/tv_rel5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_rel" />

                    <TextView
                        android:id="@+id/tv_rel5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/rounded"
                        android:backgroundTint="@color/background_color"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:paddingBottom="3dp"
                        android:text="@string/relay4"
                        android:textAlignment="center"
                        android:textColor="#050505"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_rel4"
                        app:layout_constraintTop_toBottomOf="@+id/tv_rel3" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv3"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/background_color_transparent"
                android:clickable="true"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv2"
                app:layout_constraintTop_toBottomOf="@+id/cv1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv4"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/background_color_transparent"
                android:clickable="true"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toStartOf="@+id/cv5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv5"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/background_color_transparent"
                android:clickable="true"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv4"
                app:layout_constraintTop_toBottomOf="@+id/cv3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>